--- a/app/components/Modal/style/Modal.scss
+++ b/app/components/Modal/style/Modal.scss
@@ -15,8 +15,8 @@
 
   .rc-modal {
     top: 5em;
-    max-height: calc(100vh - 10em);
-    max-width: calc(100vw - 5em);
+    max-height: 100vh;
+    max-width: 100vw;
     animation: fadeInDown 0.25s ease-out;
   }
 }
