--- a/app/components/Modal/style/PureModal.scss
+++ b/app/components/Modal/style/PureModal.scss
@@ -30,6 +30,7 @@
 .rc-modal__content {
   flex-grow: 1;
   overflow: scroll;
+  box-sizing: border-box;
 
   &::-webkit-scrollbar {
     display: none;
